--- a/package.json
+++ b/package.json
@@ -1,82 +1,107 @@
 {
-  "name": "ai-pixel-tracker-client",
+  "name": "ai-pixel-tracker-dashboard",
   "version": "1.0.0",
-  "description": "JavaScript tracking pixel that detects AI bot visits - Client SDK",
-  "main": "ai-pixel-tracker.js",
-  "types": "ai-pixel-tracker.d.ts",
+  "description": "Frontend dashboard for AI Pixel Tracker - visualize AI bot analytics",
+  "private": true,
   "scripts": {
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development",
-    "watch": "webpack --mode=development --watch",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export",
+    "analyze": "cross-env ANALYZE=true next build",
+    "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "eslint . --ext .js,.ts --fix",
-    "size": "bundlesize",
-    "serve": "http-server dist -p 8080",
-    "minify": "terser ai-pixel-tracker.js -o ai-pixel-tracker.min.js --compress --mangle"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "chart.js": "^4.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "axios": "^1.6.2",
+    "swr": "^2.2.4",
+    "date-fns": "^3.0.6",
+    "lucide-react": "^0.294.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
+    "@headlessui/react": "^1.7.17",
+    "react-hook-form": "^7.48.2",
+    "@hookform/resolvers": "^3.3.2",
+    "zod": "^3.22.4",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.8.0",
+    "react-table": "^7.8.0",
+    "@tanstack/react-table": "^8.11.2",
+    "react-query": "^3.39.3",
+    "@tanstack/react-query": "^5.14.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "cross-env": "^7.0.3",
+    "@next/bundle-analyzer": "^14.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-interactions": "^7.6.6",
+    "@storybook/addon-links": "^7.6.6",
+    "@storybook/blocks": "^7.6.6",
+    "@storybook/nextjs": "^7.6.6",
+    "@storybook/react": "^7.6.6",
+    "@storybook/testing-library": "^0.2.2",
+    "storybook": "^7.6.6"
   },
   "keywords": [
-    "tracking-pixel",
-    "ai-detection",
-    "bot-detection",
-    "web-analytics",
-    "javascript-sdk",
-    "tracking-script",
-    "chatgpt",
-    "claude",
-    "perplexity",
-    "ai-bots"
+    "dashboard",
+    "analytics",
+    "ai-tracking",
+    "react",
+    "nextjs",
+    "typescript",
+    "tailwind"
   ],
   "author": "AI Pixel Tracker",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/your-username/ai-pixel-tracker.git",
-    "directory": "client"
+    "directory": "dashboard"
   },
   "bugs": {
     "url": "https://github.com/your-username/ai-pixel-tracker/issues"
   },
-  "homepage": "https://ai-pixel.com",
-  "files": [
-    "ai-pixel-tracker.js",
-    "ai-pixel-tracker.min.js",
-    "ai-pixel-tracker.d.ts",
-    "README.md"
-  ],
-  "devDependencies": {
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "babel-loader": "^9.1.3",
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
-    "terser-webpack-plugin": "^5.3.9",
-    "eslint": "^8.55.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "bundlesize": "^0.18.1",
-    "http-server": "^14.1.1",
-    "terser": "^5.26.0",
-    "@types/jest": "^29.5.8",
-    "typescript": "^5.3.3"
-  },
-  "bundlesize": [
-    {
-      "path": "./ai-pixel-tracker.min.js",
-      "maxSize": "10 kB",
-      "compression": "gzip"
-    }
-  ],
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ],
-  "jsdelivr": "ai-pixel-tracker.min.js",
-  "unpkg": "ai-pixel-tracker.min.js"
+  "homepage": "https://github.com/your-username/ai-pixel-tracker#readme",
+  "browserslist": {
+    "production": [
+      ">0.3%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
